Pick and add five currencies for the user to exchange between.

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
     <h1>Wanna exchange some moneeeeeey?</h1>
     <h3>Ok, cool, please enter your USD amount and then pick a currency!</h3>
     <div id="pick">
-      <label><input type="radio" id="CAD" value="CAD" name="currencies">Canadian Dollars!</label>
+      <label><input type="radio" id="CAD" value="CAD" name="currencies">Canadian Dollar!</label>
+      <label><input type="radio" id="BRL" value="BRL" name="currencies">Brazilian Real!</label>
+      <label><input type="radio" id="PHP" value="PHP" name="currencies">Philippine Peso!</label>
+      <label><input type="radio" id="RON" value="RON" name="currencies">Romanian Leu!</label>
+      <label><input type="radio" id="JPY" value="JPY" name="currencies">Japanese Yen!</label>
     </div>
   </div>
 </body>
