finish adding button and input box for entering usd amount, realize you have to go back to js, go to bed and vow to tackle it tomorrow.

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,8 @@
       <label><input type="radio" id="RON" value="RON" name="currencies">Romanian Leu!</label>
       <label><input type="radio" id="JPY" value="JPY" name="currencies">Japanese Yen!</label>
     </div>
+    <p>Now enter an amount of USD to exchange!</p>
+    <input type="number" id="usd">
+    <button type="submit" id="submitMoney" class="btn btn-success">Get your exchange amount!</button>
   </div>
 </body>
