Realize you never added where the answer will pop up when the button is pressed. Fix that.

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,7 @@
     <p>Now enter an amount of USD to exchange!</p>
     <input type="number" id="usd">
     <button type="submit" id="submitMoney" class="btn btn-success">Get your exchange amount!</button>
+    <p>Your exchanged money =</p>
+    <div id="exchangeShow"></div>
   </div>
 </body>
